[package]
name = "multiset_hash_python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "multiset_hash_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.21.1"
multiset-hash = { path = "../multiset-hash" }
sha2 = "0.9.5"
digest = "0.9.0"
